--- a/research.html
+++ b/research.html
@@ -23,7 +23,32 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Projects and Research highlights</h1>
+<h1>Projects</h1>
+</div>
+  <p>Theoretical foundation of deep/machine learning &nbsp; and &nbsp; Efficient learning algorithm. </p>
+<h2>Theoretical foundation of deep/machine learning</h2>
+<ul>
+<li><p>Deep learning explanation, convergence, and generalization analysis</p>
+</li>
+<li><p>Graph neural network learning theory</p>
+</li>
+<li><p>Fairness in deep/machine learning</p>
+</li>
+<li><p>Matrix completion </p>
+</li>
+</ul>
+<h2>Efficient learning algorithm</h2>
+<ul>
+<li><p>Neural network pruning </p>
+</li>
+<li><p>Graph sampling</p>
+</li>
+<li><p>Data compression</p>
+</li>
+<li><p>Few-shot learning</p>
+</li>
+</ul>
+  <h1>Research highlights</h1>
 </div>
   <h2> Neural network pruning</h2>
   <li><p><b>Selected Publications</b>:</p>
