--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@
   <h1>Research highlights</h1>
 </div>
   <h2> Neural network pruning</h2>
-  <li><p><b>Selected Publications</b>:</p>
+  <p><li><b>Selected Publications</b>:</p>
 </li>
 </ul>
 <ol>
@@ -81,7 +81,7 @@
   
   <p>  <img src="research/ST3.PNG" width="750" height="300"> </p>
   
-<li><p><b>Selected Publications</b>:</p>
+<p><li><b>Selected Publications</b>:</p>
 </li>
 </ul>
 <ol>
@@ -90,7 +90,7 @@
 </ol>
   
   <h2> Graph neural networks</h2>
-  <li><p><b>Selected Publications</b>:</p>
+  <p><li><b>Selected Publications</b>:</p>
 </li>
 </ul>
 <ol>
@@ -118,7 +118,7 @@
 </li></p>  
  
 <img src="research/MC2.PNG" width="800" height="350"> 
-<li><p><b>Selected Publications</b>:</p>
+<p><li><b>Selected Publications</b>:</p>
 </li>
 </ul>
 <ol>
