--- a/research.html
+++ b/research.html
@@ -34,19 +34,23 @@
 </li>
 <li><p>Fairness in deep/machine learning</p>
 </li>
+  <li><p>Deep reinforcement learning theory </p>
+</li>
 <li><p>Matrix completion </p>
 </li>
 </ul>
 <h2>Efficient learning algorithm</h2>
 <ul>
-<li><p>Neural network pruning </p>
-</li>
-<li><p>Graph sampling</p>
+<li><p>Neural network compression </p>
 </li>
 <li><p>Data compression</p>
+  </li>
+<li><p>Efficient neural network architures</p>
 </li>
 <li><p>Few-shot learning</p>
 </li>
+<li><p>Prompt engineering</p>
+</li>  
 </ul>
   <h1>Research highlights</h1>
 </div>
