--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
 <div id="toptitle">
 <h1>Projects</h1>
 </div>
-  <p>My current research focuses on <em>Theoretical foundation of deep/machine learning</em> and <em>Efficient learning algorithm</em>. </p>
+  <p>My current research and project mainly lies in the following two aspects: <em>Theoretical foundation of deep/machine learning</em> and <em>Efficient learning algorithm</em>. </p>
 <h2>Theoretical foundation of deep/machine learning</h2>
 <ul>
 <li><p>Deep learning explanation, convergence, and generalization analysis</p>
