--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@
 </li>
 <li><p>Data compression</p>
   </li>
-<li><p>Efficient neural network architures</p>
+<li><p>Efficient neural network architectures</p>
 </li>
 <li><p>Few-shot learning</p>
 </li>
