--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
   <h2> Neural network pruning</h2>
   Neural network pruning is a technique used to reduce the size of a neural network by removing unnecessary connections and neurons while maintaining or improving its performance. This technique can help to make the network more sparse, leading to several advantages such as decreased computational cost, memory usage, energy consumption, and carbon footprint. Furthermore, recent numerical findings have indicated that a well-pruned neural network can exhibit improved test accuracy and faster convergence rates. This type of pruned network is commonly referred to as "winning tickets" within the context of the lottery ticket hypothesis (LTH), and numerical evidence suggests that magnitude-based pruning is effective in finding such "winning tickets". However, LTH and its relevant paper cannot explain the benefits of training the "winning tickets" and why using magnitude-based pruning approach can find the "winning tickets". 
   
-   <p><center> <img src="research/NP1.PNG" width="400" height="125"> </center></p>
+   <p><center> <img src="research/NP1.PNG" width="600" height=auto> </center></p>
   
   
   <p><li> <b>First, we provide the theoretical guarantees for using magnitude-based pruning in finding the "winning ticket". </b> Specifically, we proves that the neuron weights that learns class-irrevelant features, e.g., background/noise features, tend to have a small magnitude. Therefore, removing the neuron weights with small magnitude will not change the expressive power of the neural network in learning good features (class-relevant features).  
@@ -68,7 +68,7 @@
   <p><li> <b>Second, we provide the theoretical explanations for a good pruning network in achieving improved test accuracy and accelerated convergence rate.</b> Specifically, our analysis demonstrates that training the "winning ticket" corresponds to a wider and steeper convergence zone, which significantly diminishes the generalization gap, resulting in improved test accuracy. Consequently, training on a "winning ticket" necessitates fewer samples to achieve a sound initialization and ensure convergence, resulting in quicker convergence rates and reduced generalization errors for the algorithm.
 </li></p>
   
-    <p><center> <img src="research/NT4.PNG" width="700" height="245"> </center></p>
+    <p><center> <img src="research/NT4.PNG" width="700" height=auto> </center></p>
   
   <p><li><b>Selected Publications</b>:</p>
 </li>
@@ -83,22 +83,22 @@
  <h2>Self-training via unlabeled data (semi-supervised learning)</h2>
 <p><b>Discription</b>: Self-training is a type of semi-supervised learning approaches that combines labeled and unlabeled data to improve the accuracy of a model. It is useful in situations where obtaining labeled data is expensive or time-consuming, but there is an abundance of unlabeled data available. In many real-world scenarios, labeled data can be scarce or difficult to obtain, e.g., medical images, and labeling large datasets can be expensive or time-consuming, e.g., labeling ImageNet took almost 4 years with 49,000 workers from 167 countries. Most importantly, by incorporating unlabeled data, self-training can improve the accuracy of a model beyond what is possible with purely labeled data. Despite the use of self-training and deep learning in various studies, there is currently a lack of theoretical understanding regarding their integration and performance. In addition, certain numerical experiments have indicated that the non-linear characteristics of neural networks could result in a decline in performance when utilizing self-training. To address the disparity between numerical results and theoretical comprehension of self-training, we present a convergence analysis of the self-training algorithm, along with theoretical guidelines for selecting hyperparameters to ensure improved generalization using unlabeled data.   Our specific contributions include </p>
  
-<center> <img src="research/ST4.PNG" width="750" height="270"> </center>
+<center> <img src="research/ST4.PNG" width="750" height=auto> </center>
   
 <p><li> <b>First, we provide quantitative justification of generalization improvement by using unlabeled data.</b>. Specifically, we prove that the improved generalization is a linear function of 1/\sqrt{M}, where M is the number of unlabeled data. 
 </li></p>
   
-<center>  <img src="research/ST2.PNG" width="600" height="200"></center>
+<center>  <img src="research/ST2.PNG" width="600" height=auto></center>
   
 <p><li> <b>Second, we provide analytical justification for the hyperparameter selection in guarantee improved performance when using unlabeled data.</b>. Our analysis focuses on the impact of the weighted loss parameter, denoted as \lambda. Lowering the value of \lambda results in a decrease in performance, while increasing it too much can cause the algorithm to diverge. The optimal value of \lambda is approximately \sqrt{N}/(\sqrt{M}+\sqrt{N}), where M and N represent the number of unlabeled and labeled data, respectively. Alternatively, one can progressively raise \lambda until the point where the algorithm diverges.
 </li></p>
-    <p> <center> <img src="research/st1.PNG" width="500" height="170"></center> </p>
+    <p> <center> <img src="research/st1.PNG" width="500" height=auto></center> </p>
   
 <p><li> <b>Third, we provide the convergence and sample complexity analysis for learning a proper model.</b> We quantify the impact of labeled and unlabeled data on the generalization of the learned model, and we show that the iterations converges to the desired model with a characterizable bound with sufficient large number of unlabeled data. 
 </li></p>  
 
   
-  <p> <center> <img src="research/ST3.PNG" width="750" height="300"></center> </p>
+  <p> <center> <img src="research/ST3.PNG" width="750" height=auto></center> </p>
   
 <p><li><b>Selected Publications</b>:</p>
 </li>
@@ -121,9 +121,9 @@
 
 <h2>Low-rank Hankel Matrix Completion</h2>
 <p><b>Discription</b>: Given given partially observed data, we need to recover original data by filling in missing entries and removing outliers. This problem is common in various fields such as recommendation systems, computer vision, and signal processing. To illustrate, imagine a data matrix representing the renewable energy output of multiple solar arrays over time. The time-series data for each array may be affected by a few shared factors, like temperature, wind speed, and UV index. As there are more data points than factors, it suggests that the data matrix is low-rank. Being able to fill in missing data or predict future outputs is crucial for energy systems planning and control. However, existing algorithms require at least one observation in each column, making it unfeasible to apply them in practical scenarios where all data is lost or inaccessible, such as prediction tasks. To solve this issue, we utilize the Hankel matrix to capture the temporal correlation across the data. We propose non-convex algorithms by exploring the structured Hankel matrix, and the algorithms achieve <b> reduced sample complexity </b> and <b> less computational time </b> with <b> theoretical guarantees</b>. Our specific contributions include </p>
- <p><center> <img src="research/MC1.PNG" width="600" height="300"></center></p>
+ <p><center> <img src="research/MC1.PNG" width="600" height=auto></center></p>
   
- <p><center> <img src="research/MC4.PNG" width="600" height="225"> </center></p>
+ <p><center> <img src="research/MC4.PNG" width="600" height=auto> </center></p>
   
 <p><li> <b>First, we propose an on-convex approach with convergence analysis for data satisfying low-rank Hankel property</b>, e.g., video processing, image super-resolution, medical image reconstruction, direction-of-arrival estimation, and linear dynamical systems.  For a data matrix satisfying low-rank Hankel property with rank r, our algorithm converges to the ground truth with exponential decay, while existing convex approximation approaches only enjoy a sub-linear converge rate.
 </li></p>
@@ -136,7 +136,7 @@
 <p><li><b>Third, Our algorithm requires less number of samples and less computational time to recover the ground truth. </b>  For a time-series matrix with dimension of n times n satisfying low-rank Hankel property,  we can save the sample complexity by a fraction of 1/n and the computational complexity by a fraction of  1/n per iteration compared with traditional appraoches.
 </li></p>  
  
-<center> <img src="research/MC2.PNG" width="600" height="260"> </center>
+<center> <img src="research/MC2.PNG" width="600" height=auto> </center>
 <p><li><b>Selected Publications</b>:</p>
 </li>
 </ul>
