--- a/research.html
+++ b/research.html
@@ -70,7 +70,7 @@
   
   <p><center> <img src="research/NT2.PNG" width="430" height=auto> <img src="research/NT3.PNG" width="250" height=auto> </center></p>
   
-   <p><li> <b>Numerical verification for the improved performance by using magnitude-based pruning approach.</b>
+   <p><li> Numerical verification for the improved performance by using magnitude-based pruning.<\li> </p>
   
     <p><center> <img src="research/NT4.PNG" width="700" height=auto> </center></p>
   
