--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a> <br />
 <div class="blocktitle"></div>
 <div class="blockcontent">
 <p>I am on the market for tenure-track Assistant Professor. I am broadly interested in artificial intelligence (AI), deep/machine learning (DL/ML), and signal processing (SP) positions.</p>
-</div></div>
+</div>
+</div>
 <h2>Research</h2>
 <p> My long-term research objective is to study the theoretical foundations of artificial
 intelligence and design more principled and efficient algorithms for better, safer, and
@@ -64,6 +65,13 @@ more efficient AI applications. As part of my research, my interests covering th
 </li>
 <li><p>Probability and Statistical Inference</p>
 </li>
+  
+<h2>What's new</h2>
+<li><p>Jan. 2023: Our paper on  <a href="https://openreview.net/forum?id=4UldFtZ_CVF">Joint Sparse Learning for Graph Neural Networks</a>  is accepted to the International Conference on Learning Representations (ICLR) 2023! </p>
+</li>
+<li><p>Jan. 2022: Our paper "<a href="https://openreview.net/forum?id=qiMXBIf4NfB">How unlabeled data improve generalization in self-training? A one-hidden-layer theoretical analysis</a>" is accepted to the 10th International Conference on Learning Representations (ICLR) 2022. Congrats, Shuai!   </p>
+</li>  
+  
 </div>
 </td>
 </tr>
