--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@ more efficient AI applications. As part of my research, my interests covering th
 <li><p>Probability and Statistical Inference</p>
 </li>
   
-<h2>What's new</h2>
+<h2>Recent news</h2>
+  
 <li><p>Jan. 2023: Our paper on  <a href="https://openreview.net/forum?id=4UldFtZ_CVF">Joint Sparse Learning for Graph Neural Networks</a>  is accepted to the International Conference on Learning Representations (ICLR) 2023! </p>
 </li>
 <li><p>Jan. 2022: Our paper "<a href="https://openreview.net/forum?id=qiMXBIf4NfB">How unlabeled data improve generalization in self-training? A one-hidden-layer theoretical analysis</a>" is accepted to the 10th International Conference on Learning Representations (ICLR) 2022. Congrats, Shuai!   </p>
