--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@ more efficient AI applications. As part of my research, my interests covering th
 </li>
 <li><p>Probability and Statistical Inference</p>
 </li>
-  
+</ul>  
 <h2>Recent news</h2>
-  
+<ul>
 <li><p>Jan. 2023: Our paper on  <a href="https://openreview.net/forum?id=4UldFtZ_CVF">Joint Sparse Learning for Graph Neural Networks</a>  is accepted to the International Conference on Learning Representations (ICLR) 2023! </p>
 </li>
-<li><p>Jan. 2022: Our paper "<a href="https://openreview.net/forum?id=qiMXBIf4NfB">How unlabeled data improve generalization in self-training? A one-hidden-layer theoretical analysis</a>" is accepted to the 10th International Conference on Learning Representations (ICLR) 2022. Congrats, Shuai!   </p>
+<li><p>Jan. 2022: Our paper "<a href="https://openreview.net/forum?id=qiMXBIf4NfB">How unlabeled data improve generalization in self-training? A one-hidden-layer theoretical analysis</a>" is accepted to the 10th International Conference on Learning Representations (ICLR), 2022!   </p>
 </li>  
-  
+</ul>  
 </div>
 </td>
 </tr>
