--- a/index.html
+++ b/index.html
@@ -68,10 +68,54 @@ more efficient AI applications. As part of my research, my interests covering th
 </ul>  
 <h2>Recent news</h2>
 <ul>
+<li><p>Mar. 2023: Invited talk for the AI Cluster Seminar at University at Albany. </p>
+</li>
+<li><p>Mar. 2023: Invited talk for the Computer Science Seminar at UMass Lowell. </p>
+</li>
+<li><p>Mar. 2023: Invited talk for the Computer Science Seminar at Oklahoma State University. </p>
+</li>
+<li><p>Feb. 2023: Invited talk for the Computer Science Seminar at University of Memphis. </p>
+</li>
 <li><p>Jan. 2023: Our paper on  <a href="https://openreview.net/forum?id=4UldFtZ_CVF">Joint Sparse Learning for Graph Neural Networks</a>  is accepted to the International Conference on Learning Representations (ICLR) 2023! </p>
 </li>
-<li><p>Jan. 2022: Our paper "<a href="https://openreview.net/forum?id=qiMXBIf4NfB">How unlabeled data improve generalization in self-training? A one-hidden-layer theoretical analysis</a>" is accepted to the 10th International Conference on Learning Representations (ICLR), 2022!   </p>
+<li><p>Jan. 2023: Invited talk for the Computer Science Colloquium at New Mexico State University. </p>
+</li>
+<li><p>Nov. 2022: Invited talk for the Electrical, and Computer Engineering Seminar at Iowa State University. </p>
+</li>
+<li><p>Mar. 2022: Paper with Hongkang "Learning and generalization of one-hidden-layer neural networks, going beyond standard Gaussian data" is accepted to 56th Annual Conference on Information Sciences and Systems (CISS), 2022. </p>
+</li>
+<li><p>Jan. 2022: Our paper "<a href="https://openreview.net/forum?id=qiMXBIf4NfB">How unlabeled data improve generalization in self-training? A one-hidden-layer theoretical analysis</a>" is accepted to the 10th International Conference on Learning Representations (ICLR) 2022!   </p>
 </li>  
+
+<li><p>Dec. 2021:  Shuai successfully defended his thesis. Thanks to Drs. <a href="https://sites.ecse.rpi.edu/~wang/">Meng Wang</a>, <a href=" https://www.isg-rpi.com/">Ali Tajer </a>, <a href=" https://homepages.rpi.edu/~mitchj/"> John E. Mitchell </a>, and <a href=" https://sites.ecse.rpi.edu/~yazici/"> 	Birsen Yazıcı </a> for serving as the commitee members. </p>
+</li>  
+
+<li><p> Sep. 2021: Our paper "<a href="https://papers.nips.cc/paper/2021/file/15f99f2165aa8c86c9dface16fefd281-Paper.pdf">Why Lottery Ticket Wins? A Theoretical Perspective of Sample Complexity on Sparse Neural Networks</a>" is accepted to the Thirty-fifth Conference on Neural Information Processing Systems (NeurIPS) 2021!   </p>
+</li>  
+<li><p>May 2021: Shuai won the Allen B. DuMont Prize from the Department of ECSE at RPI (The award is presented to outstanding doctoral graduates, and two students for the Department of ECSE at 2021). </p>
+</li>
+
+<li><p>Jun. 2020: Our paper "Improved Linear Convergence of Training CNNs with Generalizability Guarantees: A One-hidden-layer Case" is accepted to IEEE Transactions on Neural Networks and Learning Systems (TNNLS). </p>
+</li>
+
+<li><p>Jun. 2020: Our paper "<a href="https://proceedings.mlr.press/v119/zhang20y">Fast Learning of Graph Neural Networks with Guaranteed Generalizability: One-hidden-layer Case</a>" is accepted to International Conference on Machine Learning (ICML) 2020. </p>
+</li>
+
+<li><p>Sep. 2019: Shuai received Rensselaer's Founders Award of Excellence. </p>
+</li>
+
+<li><p>Feb. 2019: Our paper "Correction of Corrupted Columns in Robust Matrix Completion by Exploiting the Hankel Structure" is accepted to IEEE Transactions on Signal Processing (TSP). </p>
+</li>
+
+<li><p>Mar. 2018: Our paper "Correction of Simultaneous Bad Measurements by Exploiting the Low-rank Hankel Structure" is accepted to IEEE International Symposium on Information Theory (ISIT) 2018. </p>
+</li>
+
+<li><p>Mar. 2018: Paper with Yingshuai "Multi-Channel Hankel Matrix Completion through Nonconvex Optimization" is accepted to IEEE Journal of Selected Topics in Signal Processing (JSTSP)!  </p>
+</li>
+
+<li><p>Sep. 2017:  Paper with Yingshuai "Multi-Channel Missing Data Recovery by Exploiting the Low-rank Hankel Structures" is accepted to IEEE International Workshop on Computational Advances in Multi-Sensor Adaptive Processing (CAMSAP) 2017.  </p>
+</li>
+
 </ul>  
 </div>
 </td>
