--- a/research.html
+++ b/research.html
@@ -122,12 +122,12 @@ On the one hand, the computational complexity for processing the entire graph gr
 On the other hand, directly adopting GPUs on large graphs remains challenging because GPU memory capacity is limited and can be insufficient. As an example, modern graph benchmark datasets, e.g., OBGN-protein, can take up to 350 gigabytes (GBs) of memory, which requires multiple GPUs at an estimated cost of $400K.  </p>
  <p><center> <img src="research/GNN2.PNG" width="600" height=auto></center></p>
  
- <p><li> <b>First, my research focuses on the generalizability and convergence analysis of implementing graph neural networks in graph structured data learning.</b>. 
+ <p><li> <b>First, my research focuses on the generalizability and convergence analysis of implementing graph neural networks in graph structured data learning</b>. 
 </li></p>
 
- <p><li> <b>Second, my research focuses on developing graph sparsification methods to reduce the computational cost and sample complexity in training graph neural networks with theoretical guarantees.</b>. 
+ <p><li> <b>Second, my research focuses on developing graph sparsification methods to reduce the computational cost and sample complexity in training graph neural networks with theoretical guarantees</b>. For example, our proposed joint edge-model sparsification algorithm achieves a similar performance as training on the original data and model with a significant reducation at the computation cost (number near the data point denotes the required MACs).
 </li></p>
-
+ <p><center> <img src="research/GNN3.PNG" width="600" height=auto></center></p>
   <p><li><b>Selected Publications</b>:</p>
 </li>
 </ul>
