--- a/research.html
+++ b/research.html
@@ -112,7 +112,7 @@
 </li>
 </ol>
   
-  <h2> Graph neural networks</h2>
+  <h2> Graph Neural Networks</h2>
   <p><b>Discription</b>: Graph neural networks (GNNs) are a class of deep learning models that are designed for data learning with graph structured data. Examples of data that can be represented as graphs include social networks, biological networks, recommendation systems, communication networks, Internet of Things (IoTs) networks, and transporation networks. 
   <p><center> <img src="research/GNN1.PNG" width="600" height=auto></center></p>
 Compared with traditional neural networks, GNNs propagate information across the graph through a series of neural network layers. At each layer, each node aggregates information from its neighboring nodes and updates its own representation accordingly. The aggregation and update rules are learned by the model during training, allowing it to capture complex patterns and dependencies in the graph. GNNs have been shown to be effective in a wide range of applications, including node classification, link prediction, and graph classification. 
