--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
 </li>
 <li><p>Fairness in deep/machine learning</p>
 </li>
-  <li><p>Deep reinforcement learning theory </p>
+<li><p>Deep reinforcement learning theory </p>
 </li>
 <li><p>Matrix completion </p>
 </li>
@@ -49,7 +49,9 @@
 </li>
 <li><p>Few-shot learning</p>
 </li>
-<li><p>Prompt engineering</p>
+<li><p>Distributed machine learning</p>
+</li>
+<li><p>Foundation model</p>
 </li>  
 </ul>
   <h1>Research highlights</h1>
