--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@ more efficient AI applications. As part of my research, my interests covering th
 </ul>  
 <h2>Recent news</h2>
 <ul>
-<li><p>Apr. 2023: One paper has been accepted at ICML 2023. </p>
-<ul>
+<li><p>Apr. 2023: One paper has been accepted at ICML 2023. </p></li>
 <li><p>Mar. 2023: Invited talk for the AI Cluster Seminar at University at Albany. </p>
 </li>
 <li><p>Mar. 2023: Invited talk for the Computer Science Seminar at UMass Lowell. </p>
