--- a/index.html
+++ b/index.html
@@ -49,19 +49,15 @@ E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a> <br />
 intelligence and design more principled and efficient algorithms for better, safer, and
 more efficient AI applications. As part of my research, my interests covering the following areas: </p>
 <ul>
-<li><p>Deep Learning Theory</p>
+<li><p>Machine/Deep Learning</p>
 </li>
-<li><p>Foundation Model</p>
+<li><p>Learning Theory</p>
 </li>
-<li><p>Trustworthy AI</p>
+<li><p>High-dimensional Data Analysis</p>
 </li>
-<li><p>Graph Neural Network</p>
+<li><p>Spatio-temporal Data Analysis</p>
 </li>
 <li><p>Deep Reinforcement Learning</p>
-</li>
-<li><p>Federated Learning</p>
-</li>
-<li><p>Matrix Recovery/Completion</p>
 </li>
 <li><p>Probability and Statistical Inference</p>
 </li>
