--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a> <br />
 <p>Shuai is currently a postdoc at Rensselaer Polytechnic Institute (RPI). He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering (ECSE) at Rensselaer Polytechnic Institute (RPI) in 2021, supervised by Prof. <a href="https://sites.ecse.rpi.edu/~wang/">Meng Wang</a>. He received his Bachelor's degree in Electrical Engineering (EE) at the University of Science and Technology of China (USTC) in 2016. </p><div class="infoblock">
 <div class="blocktitle"></div>
 <div class="blockcontent">
-<p>I am on the market for tenure-track Assistant Professor. I am broadly interested in artificial intelligence (AI), deep/machine learning (DL/ML), and signal processing (SP) positions.</p>
+<p>I am joining the Department of Data Science at New Jersey Institute of Technology (NJIT) as an Assistant Professor in Fall 2023. I am looking for self-motivated students with interests in data science, machine/deep learning, and signal processing. </p>
 </div>
 </div>
 <h2>Research</h2>
