--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,9 @@
 <h2>Selected Publications</h2>
 <p>* represents equal contribution</p>
  <ol>
+<li><p>Nowaz Chowdhury, <b>Shuai Zhang<\b>, Meng Wang, Sijia Liu, Pin-Yu Chen. “<em>Patch-level Routing in Mixture-of-Experts is Provably Sample-efficient for Convolutional Neural Networks.</em>” In Proc. of 2023 International Conference on Machine Learning (<b>ICML</b>), 2023. [<a href="Pub/ICML23.pdf">pdf</a>]</p>
+</li>
+  
 <li><p><b>Shuai Zhang</b>, Meng Wang, Pin-Yu Chen, Sijia Liu, Songtao Lu, Miao Liu. “<em>Joint Edge-Model Sparse Learning is Provably Efficient for Graph Neural Networks.</em>” In International Conference on Learning Representations (<b>ICLR</b>), 2023. [<a href="Pub/ICLR23.pdf">pdf</a>]</p>
 </li>
  <li><p><b>Shuai Zhang</b>, Meng Wang, Sijia Liu, Pin-Yu Chen, and Jinjun Xiong. “<em>How unlabeled data improve generalization in self-training? A one-hidden-layer theoretical analysis</em>.” In Proc. of The Tenth International Conference on Learning Representations (<b>ICLR</b>), 2022. [<a href="Pub/ICLR22.pdf">pdf</a>]</p>
