--- a/research.html
+++ b/research.html
@@ -17,6 +17,8 @@
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="research.html" class="current">Projects</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
+  <div class="menu-category">Teaching</div>
+<div class="menu-item"><a href="Teaching.html">DS675 (Fall 2023)</a></div>
 <div class="menu-category">Others</div>
 <div class="menu-item"><a href="talk.html">Talks</a></div>
 </td>
