--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
 <h2>Selected Publications</h2>
 <p>* represents equal contribution</p>
  <ol>
-<li><p>Nowaz Chowdhury, <b>Shuai Zhang<\b>, Meng Wang, Sijia Liu, Pin-Yu Chen. “<em>Patch-level Routing in Mixture-of-Experts is Provably Sample-efficient for Convolutional Neural Networks.</em>” In Proc. of 2023 International Conference on Machine Learning (<b>ICML</b>), 2023. [<a href="Pub/ICML23.pdf">pdf</a>]</p>
+<li><p>Nowaz Chowdhury, <b>Shuai Zhang</b>, Meng Wang, Sijia Liu, Pin-Yu Chen. “<em>Patch-level Routing in Mixture-of-Experts is Provably Sample-efficient for Convolutional Neural Networks.</em>” In Proc. of 2023 International Conference on Machine Learning (<b>ICML</b>), 2023. [<a href="Pub/ICML23.pdf">pdf</a>]</p>
 </li>
   
 <li><p><b>Shuai Zhang</b>, Meng Wang, Pin-Yu Chen, Sijia Liu, Songtao Lu, Miao Liu. “<em>Joint Edge-Model Sparse Learning is Provably Efficient for Graph Neural Networks.</em>” In International Conference on Learning Representations (<b>ICLR</b>), 2023. [<a href="Pub/ICLR23.pdf">pdf</a>]</p>
