--- a/Teaching.html
+++ b/Teaching.html
@@ -18,9 +18,9 @@
 <div class="menu-item"><a href="research.html">Projects</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="Teaching.html">DS675 (Fall 2023)</a></div>
+<div class="menu-item"><a href="Teaching.html"  class="current">DS675 (Fall 2023)</a></div>
 <div class="menu-category">Others</div>
-<div class="menu-item"><a href="talk.html" class="current">Talks</a></div>
+<div class="menu-item"><a href="talk.html">Talks</a></div>
 </td>
 </td>
 <td id="layout-content">
