--- a/publications.html
+++ b/publications.html
@@ -69,14 +69,11 @@
   
 <h2>Preprint</h2>  
 <ol>
-<li><p><b>Shuai Zhang</b>, Hongkang Li, Meng Wang, Miao Liu, Pin-Yu Chen, Songtao Lu, Sijia Liu, Keerthiram Murugesan, Subhajit Chaudhury. “<em>On the Convergence and Sample Complexity Analysis of Deep Q-Networks with Epsilon-Greedy Exploration.</em>” Submitted to The Fortieth International Conference on Machine Learning (<b>ICML</b>), 2023.
+<li><p><b>Shuai Zhang</b>, Hongkang Li, Meng Wang, Miao Liu, Pin-Yu Chen, Songtao Lu, Sijia Liu, Keerthiram Murugesan, Subhajit Chaudhury. “<em>On the Convergence and Sample Complexity Analysis of Deep Q-Networks with Epsilon-Greedy Exploration.</em>” Submitted to Neural Information Processing Systems (<b>NeurIPS</b>).
 </li>
   
-  <li><p>Hongkang Li, <b>Shuai Zhang</b>, Meng Wang, Yihua Zhang, Pin-Yu Chen, Sijia Liu. “<em>Does promoting the minority group always improve generalization? A theoretical study of one-hidden-layer neural networks on group imbalance.</em>” Submitted to The Conference on Uncertainty in Artificial Intelligence (<b>UAI</b>), 2023.
+  <li><p>Hongkang Li, <b>Shuai Zhang</b>, Meng Wang, Yihua Zhang, Pin-Yu Chen, Sijia Liu. “<em>Does promoting the minority group always improve generalization? A theoretical study of one-hidden-layer neural networks on group imbalance.</em>” Submitted to IEEE Journal of Selected Topics in Signal Processing (<b>JSTSP</b>).
 </li>
-  
-  <li><p>Nowaz Chowdhury, <b>Shuai Zhang</b>, Meng Wang, Sijia Liu, Pin-Yu Chen. “<em>Patchlevel routing in mixture of experts is provably sample-efficient for convolutional neural networks.</em>” Submitted to The Fortieth International Conference on Machine Learning (<b>ICML</b>), 2023.
-</li>    
     
 </ol>
 </td>
