--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="cv/bio.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
-<td align="left"><p>Postdoctoral Researcher <br />
-  Department of Electrical, Computer, and System Engineering <br />
-  Rensselaer Polytechnic Institute <br />
-E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a> <br />
+<td align="left"><p>Assistant Professor <br />
+  Department of Data Science <br />
+  New Jersey Institute of Technology <br />
+E-mail: <a href="mailto:sz457@njit.edu">sz457 at njit.edu </a> <br />
   <a href="https://scholar.google.com/citations?user=RvDk-iwAAAAJ&hl=en">Google Scholar</a>
   &nbsp; &nbsp; 
   <a href="cv/CV.pdf"> CV 
@@ -40,7 +40,7 @@ E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a> <br />
   </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>Shuai is currently a postdoc at Rensselaer Polytechnic Institute (RPI). He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering (ECSE) at Rensselaer Polytechnic Institute (RPI) in 2021, supervised by Prof. <a href="https://sites.ecse.rpi.edu/~wang/">Meng Wang</a>. He received his Bachelor's degree in Electrical Engineering (EE) at the University of Science and Technology of China (USTC) in 2016. </p><div class="infoblock">
+<p>Shuai Zhang joined NJIT from Rensselaer Polytechnic Institute (RPI), where he was a postdoctoral researcher focused on theoretical and algorithmic foundations of deep learning. His interests span deep learning, optimization, data science and signal processing, with an emphasis on learning theory – the design of machine learning algorithms – and the development of efficient and trustworthy AI. Challenges to effective AI implementation remain, however, such as the high cost of computation, the limited availability of high-quality labeled data, generalizability across domains, and the lack of transparency – the absence of explanations for how AI works, raising safety concerns in areas such as healthcare and autonomous control systems. Zhang develops theoretical explanations of how AI works. He also creates learning algorithms to reduce AI model complexity and the required number of training samples, improving the reliability and efficiency of AI systems in applications such as cyber-physical systems, computer vision and spatial-temporal data analysis. Zhang has collaborated with the IBM Thomas J. Watson Research Center and the MIT-IBM Watson AI Lab on scalable and trustworthy AI projects. His research has been published in machine learning conferences and journals, including ICML, NeurIPS, ICLR, and IEEE TNNLS. He received the Allen B. DuMont Prize and Rensselaer’s Founders Award of Excellence at RPI as a graduate student. He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering (ECSE) at Rensselaer Polytechnic Institute (RPI) in 2021, supervised by Prof. <a href="https://sites.ecse.rpi.edu/~wang/">Meng Wang</a>. He received his Bachelor's degree in Electrical Engineering (EE) at the University of Science and Technology of China (USTC) in 2016. </p><div class="infoblock">
 <div class="blocktitle"></div>
 <div class="blockcontent">
 <p>I am joining the Department of Data Science at New Jersey Institute of Technology (NJIT) as an Assistant Professor in Fall 2023. I am looking for self-motivated students with interests in data science, machine/deep learning, and signal processing. </p>
