--- a/Teaching.html
+++ b/Teaching.html
@@ -29,6 +29,7 @@
 </div>
 <h2>General Information</h2>
 <p> <b>Course Number<\b>: DS675-001 CRN 96973 </p>
+<p> <b>Lecture Hours<\b>: DS675-001 CRN 96973 </p>
 </td>
 </tr>
 </table>
