--- a/Teaching.html
+++ b/Teaching.html
@@ -27,9 +27,22 @@
 <div id="toptitle">
 <h1>DS 675 Machine Leaning (Fall 2023)</h1>
 </div>
-<h2>General Information</h2>
-<p> <b>Course Number<\b>: DS675-001 CRN 96973 </p>
-<p> <b>Lecture Hours<\b>: DS675-001 CRN 96973 </p>
+ <h2>General Information</h2>
+    <h2><b>Course Number</b>: DS675-001 CRN 96973</h2>
+    <p><b>Lecture Hours</b>: 11:30am-12:50pm, Monday and Wednesday</p>
+    <p><b>Lecture Location</b>: Kupfrian Hall, Room 106</p>
+
+    <h2>Instructor</h2>
+    <p>Shuai Zhang</p>
+    <p><b>Email</b>: <a href="mailto:sz457@njit.edu">sz457@njit.edu</a></p>
+    <p><b>Office Room</b>: GITC 4410</p>
+    <p><b>Office Hour</b>: 1:00-2:20 pm, Monday and Wednesday</p>
+
+  <h2>Grader</h2>
+  <p>TBA</p>
+
+  <h2>Course Overview</h2>
+  <p>This course is an introduction to machine learning and contains both theory and applications. Students will get exposure to a broad range of machine learning methods and hands-on practice with real data. Topics include theory of generalization, model selection, gradient descent, perceptron, regression, classification, logistic regression, neural networks, support vector machines, dimensionality reduction, deep learning, etc.</p>
 </td>
 </tr>
 </table>
